[package]
name = "backburn"
repository = "https://github.com/piaoger/backburn"
license = "Apache-2.0"
edition = "2018"
exclude = ["/.github", "/.gitignore"]
authors = [ "Stephen Demos <stephen.demos@coreos.com>",
            "Luca Bruno <lucab@debian.org>" ]
description = "A simple cloud provider agent"
version = "5.0.1-alpha.0"

[package.metadata.release]
sign-commit = true
disable-push = true
disable-publish = true
pre-release-commit-message = "cargo: Backburn release {{version}}"
post-release-commit-message = "cargo: development version bump"
tag-message = "Backburn v{{version}}"

[lib]
name = "backburn"
path = "src/lib.rs"

[[bin]]
name = "backburn"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1.4"
cfg-if = "1.0"
clap = "2.33"
hostname = "0.3"
mailparse = "0.13"
maplit = "1.0"
mime = "0.3"
reqwest = { version = ">= 0.10, < 0.12", features = [ "blocking" ] }
serde =  { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
slog-async = "2.5"
slog-scope = "4.3"
slog-term = ">= 2.6, < 3"
tempfile = "3.2"
structopt = "0.3"

[dependencies.slog]
version = "2.7"
features = ["max_level_trace", "release_max_level_info"]

[dev-dependencies]
mockito = ">= 0.29, < 0.31"
